--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,7 +94,8 @@ img {
   }
 
   &-inner {
-    background: $bg-image no-repeat 20% 30% / cover;
+    // background: $bg-image no-repeat 20% 30% / cover;
+    background: url("../dist/img/showcase.jpg") no-repeat 20% 30% / cover;
     height: 5.5rem;
     border-bottom: 3px solid $main-color;
   }
